kubernetes/apps/base/dev/harbor/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  #annotations:
  #  gethomepage.dev/enabled: "true"
  #  gethomepage.dev/name: "Harbor"
  #  gethomepage.dev/icon: "harbor.png"
  #  gethomepage.dev/description: Container Registry
  #  gethomepage.dev/group: "Infrastructure"
  #  gethomepage.dev/href: "https://registry.${SECRET_DEV_DOMAIN}"
  #  gethomepage.dev/pod-selector: "app.kubernetes.io/name=harbor,app.kubernetes.io/component=core"
spec:
  hostnames:
    - "registry.${SECRET_DEV_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /service/
        - path:
            type: PathPrefix
            value: /v2/
        - path:
            type: PathPrefix
            value: /c/
      backendRefs:
        - name: harbor-core
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor-portal
          port: 80
